--- a/index.html
+++ b/index.html
@@ -370,13 +370,6 @@
                         <span class="menu__preci">$22.00</span>
                         <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
                     </div>
-                    <div class="menu__content">
-                        <img src="responsive-website-restaurant-main/assets/img/plaate4.jpg" alt="" class="menu__img">
-                        <h3 class="menu__name">Ugali Fish</h3>
-                        <span class="menu__detail">Delicious dish</span>
-                        <span class="menu__preci">$22.00</span>
-                        <a href="#" class="button menu__button"><i class='bx bx-cart-alt'></i></a>
-                    </div>
 
 
                     <div class="menu__content">
@@ -402,7 +395,7 @@
                 <div class="app__container bd-grid">
                     <div class="app__data">
                         <span class="section-subtitle app__initial">App</span>
-                        <h2 class="section-title app__initial">App is aviable</h2>
+                        <h2 class="section-title app__initial">App is available</h2>
                         <p class="app__description">Find our application and download it, you can make reservations, food orders, see your deliveries on the way and much more.</p>
                         <div class="app__stores">
                             <a href="#"><img src="assets/img/app1.png" alt="" class="app__store"></a>
@@ -434,7 +427,7 @@
         <footer class="footer section bd-container">
             <div class="footer__container bd-grid">
                 <div class="footer__content">
-                    <a href="#" class="footer__logo">Tasty Food</a>
+                    <a href="#" class="footer__logo">Thuku's Food Palace</a>
                     <span class="footer__description">Restaurant</span>
                     <div>
                         <a href="#" class="footer__social"><i class='bx bxl-facebook'></i></a>
@@ -466,10 +459,10 @@
                 <div class="footer__content">
                     <h3 class="footer__title">Adress</h3>
                     <ul>
-                        <li>Lima - Peru</li>
+                        <li>Nairobi-Kenya</li>
                         <li>Jr Union #999</li>
                         <li>999 - 888 - 777</li>
-                        <li>tastyfood@email.com</li>
+                        <li>thuku'sfoodpalace@email.com</li>
                     </ul>
                 </div>
             </div>
